--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
       - key: NODE_VERSION
         value: 20
 
-  - type: static_site
+  - type: static
     name: undervalued-estate-frontend
     rootDir: frontend
     buildCommand: npm ci && npm run build
