--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,8 @@ services:
 
   - type: web
     name: undervalued-estate-frontend
+    env: static
     rootDir: frontend
     buildCommand: npm ci && npm run build
-    publishPath: dist
+    staticPublishPath: dist
     pullRequestPreviewsEnabled: true
