--- a/cloudflare-properstar-uk/wrangler.toml
+++ b/cloudflare-properstar-uk/wrangler.toml
@@ -3,5 +3,14 @@ main = "src/worker.ts"
 compatibility_date = "2024-01-01"
 
 [triggers]
-# Staggered: ~ every 15 mins at :12, :27, :42, :57
-crons = ["12,27,42,57 * * * *"]
+# Option B: rotate workers hourly; Properstar at minute 34 on hours 3,7,11,15,19,23
+crons = [
+  "34 3,7,11,15,19,23 * * *",  # buy-focused rotation
+  "22 5 * * *"                  # daily rent sweep
+]
+
+# Enables Workers Observability (logs, traces, metrics in the dashboard)
+[observability]
+enabled = true
+# 0.0–1.0: head-based sampling for traces (1.0 = sample everything)
+head_sampling_rate = 1.0
