--- a/cloudflare-npc/wrangler.toml
+++ b/cloudflare-npc/wrangler.toml
@@ -3,5 +3,14 @@ main = "src/worker.ts"
 compatibility_date = "2024-01-01"
 
 [triggers]
-# Staggered: ~ every 15 mins at :02, :17, :32, :47
-crons = ["2,17,32,47 * * * *"]
+# Option B: rotate workers hourly; NPC at minute 12 on hours 2,6,10,14,18,22
+crons = [
+  "12 2,6,10,14,18,22 * * *",  # buy-focused rotation
+  "22 3 * * *"                  # daily rent sweep
+]
+
+# Enables Workers Observability (logs, traces, metrics in the dashboard)
+[observability]
+enabled = true
+# 0.0–1.0: head-based sampling for traces (1.0 = sample everything)
+head_sampling_rate = 1.0
