--- a/cloudflare-zoopla-uk/wrangler.toml
+++ b/cloudflare-zoopla-uk/wrangler.toml
@@ -3,5 +3,14 @@ main = "src/worker.ts"
 compatibility_date = "2024-01-01"
 
 [triggers]
-# Staggered: ~ every 15 mins at :04, :19, :34, :49
-crons = ["4,19,34,49 * * * *"]
+# Option B: rotate workers hourly; Zoopla at minute 02 on hours 0,4,8,12,16,20 (London minute aligns with UTC minute)
+crons = [
+  "2 0,4,8,12,16,20 * * *",   # buy-focused rotation
+  "22 23 * * *"                # daily rent sweep
+]
+
+# Enables Workers Observability (logs, traces, metrics in the dashboard)
+[observability]
+enabled = true
+# 0.0–1.0: head-based sampling for traces (1.0 = sample everything)
+head_sampling_rate = 1.0
