--- a/cloudflare-primelocation-uk/wrangler.toml
+++ b/cloudflare-primelocation-uk/wrangler.toml
@@ -4,10 +4,7 @@ compatibility_date = "2024-01-01"
 
 [triggers]
 # Option B: rotate workers hourly; PrimeLocation at minute 07 on hours 1,5,9,13,17,21 (keeps buy window)
-crons = [
-  "7 1,5,9,13,17,21 * * *",  # buy-focused rotation
-  "22 4 * * *"                # daily rent sweep
-]
+crons = ["7 1,5,9,13,17,21 * * *"]
 
 [observability]
 enabled = true
