--- a/cloudflare-zoopla-uk/wrangler.toml
+++ b/cloudflare-zoopla-uk/wrangler.toml
@@ -2,12 +2,13 @@ name = "undervalued-estate-scheduler-zoopla-uk"
 main = "src/worker.ts"
 compatibility_date = "2024-01-01"
 
-[triggers]
-# Option B: rotate workers hourly; Zoopla at minute 02 on hours 0,4,8,12,16,20 (London minute aligns with UTC minute)
-crons = [
-  "2 0,4,8,12,16,20 * * *",   # buy-focused rotation
-  "22 23 * * *"                # daily rent sweep
-]
+# [triggers]
+# # Option B: rotate workers hourly; Zoopla at minute 02 on hours 0,4,8,12,16,20 (London minute aligns with UTC minute)
+# # Disabled per user preference (PrimeLocation-focused scheduling)
+# # crons = [
+# #   "2 0,4,8,12,16,20 * * *",   # buy-focused rotation
+# #   "22 23 * * *"                # daily rent sweep
+# # ]
 
 # Enables Workers Observability (logs, traces, metrics in the dashboard)
 [observability]
