Improving User Experience

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,3 +10,14 @@ API_SECRET=change-me-strong-secret
 # Email (Gmail SMTP)
 GMAIL_USER=
 GMAIL_PASS=
+
+# Optional: generalized SMTP (overrides GMAIL_* if provided)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SECURE=1
+SMTP_USER=
+SMTP_PASS=
+SUPPORT_FROM_EMAIL=Support <support@yourdomain.com>
+
+# Admin notify list (comma-separated)
+ADMIN_EMAILS=
