--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "NODE_ENV=production tsx src/index.ts",
-    "lint": "echo \"No lint configured\""
+    "lint": "echo \"No lint configured\"",
+    "email:test": "tsx src/scripts/testEmail.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
